# GUARD-IT

./: .env.example  .gitignore  README.md  cspell.json  pyproject.toml
benchmarks/: muse.py  tofu.py
benchmarks/configs/: eval_tofu_bm25_forget01.yaml  eval_tofu_bm25_forget05.yaml  eval_tofu_bm25_forget10.yaml  eval_tofu_forget01.yaml  eval_tofu_forget05.yaml  eval_tofu_forget10.yaml  muse_books_mean.yaml  muse_news_mean.yaml
configs/: muse_books.yaml  muse_books_mean.yaml  muse_news.yaml  muse_news_mean.yaml
configs/examples/: muse_books.yaml  muse_news.yaml  tofu_1b_forget01.yaml  tofu_1b_forget05.yaml  tofu_1b_forget10.yaml  tofu_3b_forget01.yaml  tofu_3b_forget05.yaml  tofu_3b_forget10.yaml  tofu_8b_forget01.yaml  tofu_8b_forget05.yaml  tofu_8b_forget10.yaml
src/guard/: __init__.py
src/guard/cli/: __init__.py  _logging.py  cluster.py  eval.py  generate.py  hdb-scan  plot_similarity.py
src/guard/config/: __init__.py  clustering.py  gate.py  generation.py  loader.py  normalization.py
src/guard/model/: __init__.py  loading.py  steered.py
src/guard/offline/: __init__.py  activations.py  steering.py
src/guard/online/: __init__.py  embed.py  gate.py  hook.py  registry.py
src/guard/online/scoring/: __init__.py  activation.py  base.py  bm25.py  cosine.py  euclidean.py  llama_mean.py
src/guard/storage/: __init__.py  io.py
tests/: test_config.py  test_hooks.py  test_normalization.py
