[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "guard"
version = "0.1.0"
description = "Gated Unlearning via Activation Redirection — clustered steering vectors for machine unlearning"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["machine unlearning", "steering vectors", "language models", "activation engineering"]

dependencies = [
    "torch>=2.1.0",
    "transformers>=4.40.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "numpy>=1.24.0",
    "tqdm>=4.60.0",
    "python-dotenv>=1.0.0",
    "loguru>=0.7.0",
]

[project.optional-dependencies]
gateway = ["sentence-transformers>=2.2.0"]
tofu    = [
    "datasets>=2.14.0",
    "hydra-core>=1.3",
    "hydra-colorlog>=1.2.0",
    "rouge-score>=0.1.2",
    "scipy>=1.10.0",
    "scikit-learn>=1.3.0",
]
plot    = ["matplotlib>=3.7.0", "umap-learn>=0.5.0"]
quant   = ["bitsandbytes>=0.43.0", "accelerate>=0.30.0"]
dev     = [
    "pytest>=7.4.0",
    "pytest-cov",
    "mypy>=1.6.0",
    "ruff>=0.1.0",
]
all = ["guard[gateway,tofu,plot,quant,dev]"]

[project.scripts]
guard = "guard.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/guard"]

# ---------------------------------------------------------------------------
# Mypy — strict, but allow untyped HF model boundaries
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_ignores = true
# HuggingFace models are un-typed; ignore missing stubs
[[tool.mypy.overrides]]
module = ["transformers.*", "datasets.*", "sentence_transformers.*"]
ignore_missing_imports = true

# ---------------------------------------------------------------------------
# Pyright / Pylance — silence unknown-type warnings from torch's partial stubs
# (mypy remains the authoritative type checker; see [tool.mypy] above)
# ---------------------------------------------------------------------------
[tool.pyright]
include = ["src/guard"]
reportUnknownMemberType = "none"
reportUnknownVariableType = "none"
reportUnknownArgumentType = "none"
reportUnknownParameterType = "none"
reportUnknownLambdaType = "none"
reportMissingTypeStubs = "none"

# ---------------------------------------------------------------------------
# Ruff
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "ANN", "RUF"]
ignore = [
    "ANN401",  # typing.Any — needed at the HuggingFace model/hook boundary
    "N806",    # uppercase locals (B/K/N) — standard ML/BM25 notation
    "N812",    # `import torch.nn.functional as F` — standard PyTorch idiom
]

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
